hphp/test/slow/object_method/bad-inlining.php.expectf
int(1)

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/bad-inlining.php:23
Stack trace:
%A
